--- a/.github/workflows/Recovery.yml
+++ b/.github/workflows/Recovery.yml
@@ -14,27 +14,27 @@ on:
       LIBRARY_BRANCH:
         description: 'LIBRARY_BRANCH'
         required: true
-        default: 'twrp-12.1'
+        default: 'twrp-11'
       DEVICE_URL:
         description: 'DEVICE_URL'
         required: true
-        default: 'https://github.com/YuKongA/device_xiaomi_rubens-TWRP.git'
+        default: 'https://github.com/mastersenpai0405/twrp_device_Infinix_X689.git'
       DEVICE_BRANCH:
         description: 'DEVICE_BRANCH'
         required: true
-        default: 'twrp-12.1'
+        default: 'twrp-11.0'
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/xiaomi/rubens'
+        default: 'device/infinix/X689'
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'rubens'
+        default: 'X689'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
-        default: 'vendorbootimage'
+        default: 'bootimage'
         type: choice
         options:
         - recoveryimage
