--- a/.github/workflows/Recovery.yml
+++ b/.github/workflows/Recovery.yml
@@ -1,4 +1,4 @@
-name: Make Recovery
+name: twrp 1
 
 on:
   workflow_dispatch:
@@ -18,19 +18,19 @@ on:
       DEVICE_URL:
         description: 'DEVICE_URL'
         required: true
-        default: 'https://github.com/mastersenpai0405/twrp_device_Infinix_X689.git'
+        default: 'https://github.com/parvej789/twrp_device_tecno_LE7_a11'
       DEVICE_BRANCH:
         description: 'DEVICE_BRANCH'
         required: true
-        default: 'android-11.0'
+        default: 'android-11'
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/infinix/X689'
+        default: 'device/tecno/LE7'
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'X689'
+        default: 'LE7'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
@@ -55,7 +55,6 @@ jobs:
         sudo apt -y autoremove --purge
         sudo apt -y autoclean
         sudo apt clean
-
     - name: Maximize Build Space
       uses: easimon/maximize-build-space@master
       with:
@@ -83,7 +82,6 @@ jobs:
         cd scripts
         sudo bash setup/android_build_env.sh
         sudo bash setup/install_android_sdk.sh || true
-
     - name: Init Repo
       run: |
         mkdir ${GITHUB_WORKSPACE}/workspace
@@ -91,13 +89,11 @@ jobs:
         git config --global user.name "Hikaru's Action-Build-Bot"
         git config --global user.email "Android@teio.tk"
         repo init --depth=1 -u ${{ github.event.inputs.LIBRARY_URL }} -b ${{ github.event.inputs.LIBRARY_BRANCH }}
-
     - name: Repo Sync
       run: |
         cd ${GITHUB_WORKSPACE}/workspace
         repo sync -j$(nproc --all)
         ls -al
-
     - name: Repopick Fscrypt
       if: ${{ github.event.inputs.LIBRARY_URL == 'https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git' && github.event.inputs.LIBRARY_BRANCH == 'twrp-12.1' }}
       run: |
@@ -105,12 +101,10 @@ jobs:
         source build/envsetup.sh
         repopick 5405
         repopick 5540
-
     - name: Clone Device Tree
       run: |
         cd ${GITHUB_WORKSPACE}/workspace
         git clone ${{ github.event.inputs.DEVICE_URL }} -b ${{ github.event.inputs.DEVICE_BRANCH }} ./${{ github.event.inputs.DEVICE_PATH }}
-
     - name: Building
       run: |
         cd ${GITHUB_WORKSPACE}/workspace
@@ -119,7 +113,6 @@ jobs:
         lunch ${{ github.event.inputs.LIBRARY_NAME }}_${{ github.event.inputs.DEVICE_NAME }}-eng
         make clean
         make ${{ github.event.inputs.BUILD_TARGET }} -j$(nproc --all)
-
     - name: Upload Articact
       uses: actions/upload-artifact@v2
       with:
